@@ -50,6 +50,22 @@ name|org
 operator|.
 name|apache
 operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|TestRuleLimitSysouts
+operator|.
+name|Limit
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|client
@@ -189,6 +205,13 @@ comment|/**  * A few tests for parsing Solr response in QueryResponse  *   * @si
 end_comment
 
 begin_class
+annotation|@
+name|Limit
+argument_list|(
+name|bytes
+operator|=
+literal|20000
+argument_list|)
 DECL|class|QueryResponseTest
 specifier|public
 class|class
